@@ -1,18 +1,18 @@
 npcdensls: np=1: 116.3, np=2: 104.5, ratio=0.90
 npcdensml: np=1: 47.1, np=2: 24.0, ratio=0.51
-npcdistccdf: np=1: 64.8, np=2: 34.6, ratio=0.53
+npcdistccdf: np=1: 64.8, np=2: 35.6, ratio=0.55
 npcmstest: np=1: 70.1, np=2: 49.2, ratio=0.70
 npconmode: np=1: 85.8, np=2: 34.7, ratio=0.40
 npdeneqtest: np=1: 41.0, np=2: 22.5, ratio=0.55
 npdeptest: np=1: 65.9, np=2: 35.4, ratio=0.54
 npindexich: np=1: 35.2, np=2: 18.6, ratio=0.53
 npindexks: np=1: 47.7, np=2: 25.6, ratio=0.54
-npplreg: np=1: 89.1, np=2: 51.3, ratio=0.58
+npplreg: np=1: 89.1, np=2: 51.4, ratio=0.58
 npqreg: np=1: 93.0, np=2: 49.1, ratio=0.53
-npreglcaic: np=1: 74.3, np=2: 52.5, ratio=0.71
-npreglcls: np=1: 77.7, np=2: 46.0, ratio=0.59
-npregllaic: np=1: 83.2, np=2: 39.9, ratio=0.48
-npregllls: np=1: 87.2, np=2: 42.3, ratio=0.49
+npreglcaic: np=1: 74.3, np=2: 44.8, ratio=0.60
+npreglcls: np=1: 77.7, np=2: 44.7, ratio=0.58
+npregllaic: np=1: 83.2, np=2: 55.2, ratio=0.66
+npregllls: np=1: 87.2, np=2: 42.7, ratio=0.49
 npscoef: np=1: 36.4, np=2: 29.4, ratio=0.81
 npsdeptest: np=1: 75.5, np=2: 53.6, ratio=0.71
 npsigtest: np=1: 135.1, np=2: 82.3, ratio=0.61
