@@ -3,19 +3,19 @@ Function & Secs(1) & Secs(2) & Ratio\cr
 \hline
 npcdensls & 116.3 & 104.5 & 0.90\cr
 npcdensml & 47.1 & 24.0 & 0.51\cr
-npcdistccdf & 64.8 & 34.6 & 0.53\cr
+npcdistccdf & 64.8 & 35.6 & 0.55\cr
 npcmstest & 70.1 & 49.2 & 0.70\cr
 npconmode & 85.8 & 34.7 & 0.40\cr
 npdeneqtest & 41.0 & 22.5 & 0.55\cr
 npdeptest & 65.9 & 35.4 & 0.54\cr
 npindexich & 35.2 & 18.6 & 0.53\cr
 npindexks & 47.7 & 25.6 & 0.54\cr
-npplreg & 89.1 & 51.3 & 0.58\cr
+npplreg & 89.1 & 51.4 & 0.58\cr
 npqreg & 93.0 & 49.1 & 0.53\cr
-npreglcaic & 74.3 & 52.5 & 0.71\cr
-npreglcls & 77.7 & 46.0 & 0.59\cr
-npregllaic & 83.2 & 39.9 & 0.48\cr
-npregllls & 87.2 & 42.3 & 0.49\cr
+npreglcaic & 74.3 & 44.8 & 0.60\cr
+npreglcls & 77.7 & 44.7 & 0.58\cr
+npregllaic & 83.2 & 55.2 & 0.66\cr
+npregllls & 87.2 & 42.7 & 0.49\cr
 npscoef & 36.4 & 29.4 & 0.81\cr
 npsdeptest & 75.5 & 53.6 & 0.71\cr
 npsigtest & 135.1 & 82.3 & 0.61\cr
